Edit: Using Zapier with Gram-hosted MCP servers

--- a/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
+++ b/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
@@ -2,7 +2,7 @@
 
 [Zapier](https://zapier.com/) is a leading automation platform that connects thousands of apps. With the **MCP Client by Zapier** integration, you can connect Zapier to your [Gram-hosted MCP servers](/blog/release-gram-beta), allowing you to trigger tools and actions on your MCP server directly from your Zapier workflows.
 
-This guide will show you how to connect Zapier to a Gram-hosted MCP server using an example Push Advisor API. You'll learn how to set up the connection and create a Zap that you will interact with in a Slack channel and use custom MCP tools to check if today is a good day to push to production.
+This guide shows you how to connect Zapier to a Gram-hosted MCP server using an example Push Advisor API. You'll learn how to set up the connection, create a Zap that you can interact with in a Slack channel, and use custom MCP tools to check whether today is a good day to push to production.
 
 ## Prerequisites
 
@@ -22,45 +22,49 @@ In the [Gram dashboard](https://app.getgram.ai), click **New Project** to create
 
 ![get-started](/assets/docs/gram/img/guides/zapier/get-started.png)
 
-Once the project is created, click the **Get Started** button.
+Once you've created the project, click the **Get Started** button.
 
-Choose **Start from API**. Gram will then guide you through the following steps.
+Choose **Start from API**. Gram then guides you through the following steps.
 
 ### Step 1: Upload the OpenAPI document
 
-Upload the [Push Advisor OpenAPI document](https://github.com/ritza-co/gram-examples/blob/main/push-advisor-api/openapi.yaml), enter "Push Advisor" as the API name, and click **Continue**.
+Upload the [Push Advisor OpenAPI document](https://github.com/ritza-co/gram-examples/blob/main/push-advisor-api/openapi.yaml), enter `Push Advisor` as the API name, and click **Continue**.
 
 ![open-api-doc](/assets/docs/gram/img/guides/zapier/upload-openAPI.png)
 
 ### Step 2: Create a toolset
 
-Give your toolset a name (e.g. `push_advisor`) and click **Continue**. This will generate tools from your OpenAPI document.
+Give your toolset a name (for example, `push_advisor`) and click **Continue**.
 
 ![name-toolset](/assets/docs/gram/img/guides/zapier/name-toolset.png)
 
-Note the names of the tools that have been extracted from the OpenAPI document. 
+Notice that the **Name Your Toolset** dialog displays the names of the tools that Gram will generate from your OpenAPI document.
 
 ### Step 3: Configure MCP
 
-Enter a URL slug for the MCP server (e.g., `zapier-push-advisor`) and click **Continue**.
+Enter a URL slug for the MCP server (for example, `zapier-push-advisor`) and click **Continue**.
 
 ![mcp-slug](/assets/docs/gram/img/guides/zapier/mcp-slug.png)
 
-This will finalize the creation of the toolset from the OpenAPI document.
+This finalizes the creation of the toolset from the OpenAPI document.
 
 ### Step 4: Test the toolset
 
-We can test that our tools are working correctly using the **Gram Playground**. Navigate to the **Playground** page and you will see a chatbot page with all our available tools listed on the left. 
+We can test that our tools work correctly using the **Gram Playground**. Navigate to the **Playground** page. The chatbot page lists all our available tools on the left. 
 
-Ask some questions in the chat that would trigger tool calls. For example, "Can I push to prod?".
+Ask some questions in the chat that would trigger tool calls. For example:
 
-The AI will determine the correct tool to call and return a response based on the answer data.
+```
+Can I push to prod?
+```
+
+The AI determines the correct tool to call and returns a response based on the answer data.
 
 ![playground](/assets/docs/gram/img/guides/zapier/playground.gif)
 
 ### Creating an API key
 
-Navigate to **Settings** and click **New API Key**. Name your key and click **Create**. Then copy the key and store it somewhere secure; we will use it later to integrate with Zapier.
+Navigate to **Settings** and click **New API Key**. Name your key and click **Create**. Then copy the key and store it somewhere secure (we'll use it later to integrate with Zapier).
 
 ![gram-api-key](/assets/docs/gram/img/guides/zapier/gram-api-key.png)
 
@@ -70,46 +74,45 @@ Go to the **MCP** tab and click on your toolset. Click **Enable**, then scroll d
 
 ![public-visibility](/assets/docs/gram/img/guides/zapier/public-visibility.png)
 
-Finally, copy the **Hosted URL** from the configuration (e.g. `https://app.getgram.ai/mcp/your-mcp-slug`) which we will use, along with our API key, to integrate with Zapier.
+Finally, copy the **Hosted URL** from the configuration (for example, `https://app.getgram.ai/mcp/your-mcp-slug`). We'll use the URL along with our API key to integrate with Zapier.
 
 ## Creating a Zap with Gram MCP
 
-Let's create a Zap that will interact with our user through Slack and make use of our MCP toolset.
+Let's create a Zap that interacts with our user through Slack and makes use of our MCP toolset.
 
-To get started, sign into your Zapier account and press **+ Create** and choose **Zaps**.
+To get started, sign in to your Zapier account, click **+ Create**, and choose **Zaps**.
 
 ![zapier-create](/assets/docs/gram/img/guides/zapier/zapier-create.png)
 
 ### Step 1: Create the Trigger
 
-Click the placeholder for the trigger to open the trigger configuration screen and select Slack from the options list.
+Click the placeholder for the trigger to open the trigger configuration screen and select **Slack** from the options list.
 
 For the **Trigger event** select **New Message Posted to Channel**, then sign in to your Slack account under **Account** and press **Continue**.
 
 ![trigger-config-1](/assets/docs/gram/img/guides/zapier/trigger-config-1.png)
 
-Next, in the **Configure** tab, select your preferred channel from your Slack workspace and click **Continue**.
+Next, in the **Configure** tab, select your preferred **Channel** from your Slack workspace and click **Continue**.
 
 ![trigger-config-2](/assets/docs/gram/img/guides/zapier/trigger-config-2.png)
 
-Before testing the trigger, send a message in your Slack channel that we can use for the remaining setup (e.g. "Should I push?"). Then test the trigger, select the message you sent from the detected list, and then click **Continue with select record**.
+Before testing the trigger, open your chosen Slack channel and send a message that we can use for the remaining setup (for example, *"Should I push?"*). Then test the trigger, select that message from the recent records list, and click **Continue with selected record**.
 
 ![trigger-config-3](/assets/docs/gram/img/guides/zapier/trigger-config-3.png)
 
+### Step 2: Add the MCP Client action
 
-### Step 2: Add the MCP Client Action
-
-From the Actions menu, search for 'MCP' and choose **MCP Client**.
+From the Actions menu, search for `MCP` and choose **MCP Client**.
 
 Select **Run Tool** as the **Action event**.
 
 ![mcp-client](/assets/docs/gram/img/guides/zapier/mcp-client.png)
 
-Click **Sign in** under **Account** and enter your Gram **MCP Server URL** and **Bearer Token** (this will be the API key that we copied from Gram earlier). Set Transport to **Streamable HTTP** and OAuth to **No**, then click **Yes, Continue to MCP Client**.
+Click **Sign in** under **Account** and enter your Gram **Server URL** and **Bearer Token** (this is the API key you copied from Gram earlier). Set **Transport** to **Streamable HTTP** and set **OAuth** to **No**, then click **Yes, Continue to MCP Client**.
 
 ![zapier-gram-account](/assets/docs/gram/img/guides/zapier/zapier-gram-account.png)
 
-Click **Continue**. In the **Configure** section click the **Tool** dropdown to load the list of tools from your Gram server. Select the `can_i_push_to_prod` tool.
+Click **Continue**. In the **Configure** section, click the **Tool** dropdown to load the list of tools from your Gram server. Select the `can_i_push_to_prod` tool.
 
 ![select-tool](/assets/docs/gram/img/guides/zapier/select-tool.png)
 
@@ -117,20 +120,21 @@ Click **Continue** and then **Test step**. You should see a successful response 
 
 ![tool-result](/assets/docs/gram/img/guides/zapier/tool-result.png)
 
-Once you're confident that the Gram server is connected, press the **+** to add another action.
+Once you're confident that you've connected the Gram server, click the **+** button to add another action.
 
 ### Step 3: AI response
 
 To demonstrate how we can integrate an LLM into our workflow using Zapier, we will add an **AI by Zapier** action. We will pass it the result of our MCP tool call and get a customized response.
 
-When we add the action, we will be presented with a prompt builder screen. Here we can customize our AI Model to do exactly what we want.
+When we add the action, we are presented with a prompt builder screen. Here we can customize our AI Model to do exactly what we want.
 
-Select **Custom prompt** for **Build mode** and your preferred **Model**. Then, under **Input fields** press **+ Add field**. Give the field a name, then under **Field value** press the **+** sign and find the **Structured Content Reason** field that is returned from our MCP tool. Finally, set the content type to **Text** and press **Save**.
+Select **Custom prompt** for **Build mode** and select your preferred **Model**. Under **Input fields**, press **+ Add field**. Give the field a name, then under **Field value**, press the **+** sign, and find the **Structured Content Reason** field returned from the MCP tool. Finally, set the **Content Type** to **Text** and press **Save**.
 
 ![input-ai-field](/assets/docs/gram/img/guides/zapier/input-ai-field.png)
 
-In the **Prompt** field, instruct the bot to give us a friendly response to questions about pushing to production making sure to use the result of the tool. A stronger prompt will cause the AI to behave more predictably. 
-For example, a reasonably strong prompt could be:
+In the **Prompt** field, instruct the bot to give you a friendly response to questions about pushing to production, making sure to use the result of the tool. A stronger prompt will cause the AI to behave more predictably.
+
+For example, this is a reasonably strong prompt:
 
 ```
 You are a helpful and friendly DevOps assistant for a software engineering team. A user has just asked if it is safe to push to production.
@@ -156,7 +160,7 @@ Your task is to write a concise Slack reply based on this status:
 - Address the team directly.
 ```
 
-Zapier will give us an estimation on how strong it thinks our prompt is, and allows us to generate a sample preview response so we can see if we are satisfied with the behaviour. Once you are happy with the prompt, click **Finish**.
+Zapier will give you an estimation of your prompt's strength and allow you to generate a sample preview response, so you can see whether you're satisfied with its behavior. Once you're happy with the prompt, click **Finish**.
 
 ![prompt-config](/assets/docs/gram/img/guides/zapier/prompt-config.png)
 
@@ -166,19 +170,19 @@ Add a final action step and select **Slack**. Choose **Send Channel Message** as
 
 ![slack-send](/assets/docs/gram/img/guides/zapier/slack-send.png)
 
-In the **Channel** field, select the same channel as the trigger. In the **Message Text** field, insert the output from the **AI by Zapier** step. Make sure **Send as a bot?** is set to **Yes**. This will ensure that our trigger action does not kick off for the bot message, causing a loop.
+In the **Channel** field, select the same channel as the trigger. In the **Message Text** field, insert the output from the **AI by Zapier** step. Make sure **Send as a bot?** is set to **Yes**. This ensures that the bot message doesn't kick off our trigger action, causing a loop.
 
 ![slack-message-config](/assets/docs/gram/img/guides/zapier/slack-message-config.png)
 
 Click **Continue** and test the step to send a message to Slack.
 
-### Step 5: Deploy and test your Zap.
+### Step 5: Deploy and test your Zap
 
-To deploy and enable your Zap, first rename it to something relevant and then hit **Publish**.
+To deploy and enable your Zap, first rename it something relevant, then click **Publish**.
 
 ![rename-and-deploy](/assets/docs/gram/img/guides/zapier/rename-and-deploy.png)
 
-Your Zap is now live and you can test it by sending a message in your Slack channel.
+Your Zap is now live, and you can test it by sending a message in your Slack channel.
 
 ![slack-message](/assets/docs/gram/img/guides/zapier/slack-message.png)
 
@@ -186,7 +190,7 @@ Your Zap is now live and you can test it by sending a message in your Slack chan
 
 You have successfully connected Zapier to a Gram-hosted MCP server. This allows you to bring any API or tool hosted on Gram into your Zapier automation workflows.
 
-You can add more tools to your Gram toolset and they will become available in the "Run Tool" dropdown in Zapier.
+When you add more tools to your Gram toolset, they become available in the **Run Tool** dropdown in Zapier.
 
 Ready to build your own MCP server? [Try Gram today](/product/gram) and see how easy it is to turn any API into agent-ready tools.
 
