Edit: Connecting Mastra agents to Gram-hosted MCP servers

--- a/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
@@ -21,7 +21,7 @@ To follow this tutorial, you need:
 
 ## Creating a Gram MCP server
 
-If you already have a Gram MCP server configured, you can skip to [connecting Mastra to your Gram-hosted MCP server](#connecting-mastra-to-your-gram-hosted-mcp-server). For an in-depth guide to how Gram works and more details on how to create a Gram-hosted MCP server, check out the [Gram concepts guide](/mcp/core-concepts).
+If you already have a Gram MCP server configured, you can skip to [connecting Mastra to your Gram-hosted MCP server](#connecting-mastra-to-your-gram-hosted-mcp-server). For an in-depth guide to how Gram works and a demonstration of how to create a Gram-hosted MCP server, check out the [Gram concepts guide](/mcp/core-concepts).
 
 ### Setting up a Gram project
 
@@ -41,7 +41,7 @@ Upload the [Push Advisor OpenAPI document](https://github.com/ritza-co/gram-exam
 
 #### Step 2: Create a toolset
 
-Give your toolset a name (for example, "Push Advisor") and click **Continue**.
+Give your toolset a name (for example, `Push Advisor`) and click **Continue**.
 
 ![Screenshot of the create toolset dialog](/assets/docs/gram/img/guides/mastra/create-toolset.png)
 
@@ -53,7 +53,7 @@ Enter a URL slug for the MCP server and click **Continue**.
 
 ![Screenshot of the configure MCP dialog](/assets/docs/gram/img/guides/mastra/configure-mcp.png)
 
-Gram will create a new toolset from the OpenAPI document.
+Gram creates a new toolset from the OpenAPI document.
 
 Click **Toolsets** in the sidebar to view the Push Advisor toolset.
 
@@ -71,7 +71,6 @@ The Push Advisor API is hosted at `https://canpushtoprod.abdulbaaridavids04.work
 
 ![Set server URL](/assets/docs/gram/img/guides/mastra/set-server-url.png)
 
-
 ### Publishing an MCP server
 
 Let's make the toolset available as an MCP server.
@@ -82,7 +81,7 @@ On the **MCP Details** page, click **Enable** and then **Enable Server** to enab
 
 ![Screenshot of the MCP details page](/assets/docs/gram/img/guides/mastra/mcp-details.png)
 
-Take note of your MCP server URL on the **Hosted URL** section.
+Take note of your MCP server URL in the **Hosted URL** section.
 
 [Generate a GRAM API key](/docs/gram/concepts/api-keys) in the **Settings** tab.
 
@@ -92,20 +91,20 @@ This section covers creating a Mastra project and configuring it to connect to a
 
 ### Project setup
 
-Run the following command to create a Mastra project. 
+Run the following command to create a Mastra project:
 
 ```bash
 npm create mastra@latest
 ```
 
-You will be prompted with the following options: 
+You will be prompted to provide the following information: 
 
-- The project name: mastra-mcp
-- The destination for the Mastra files: Press Enter
-- The default provider: OpenAI
-- The OpenAI key: Enter the OpenAI key
+- The project name: Enter `mastra-mcp`.
+- The destination for the Mastra files: Press `Enter`.
+- The default provider: Select `OpenAI`.
+- The OpenAI key: Enter the OpenAI key.
 
-Press Enter to accept defaults for the remaining options.
+Press `Enter` to accept the default options for the remaining prompts.
 
 ![Screenshot of the Mastra project setup prompts](/assets/docs/gram/img/guides/mastra/mastra-project-setup.png)
 
@@ -158,7 +157,7 @@ src/
   └── index.ts                    # Entry point
 ```
 
-This follows Mastra's recommended organization: the `mastra/` directory contains agents and workflows, configuration lives in `config/`, and the entry point orchestrates everything.
+This follows Mastra's recommended organization: the `mastra/` directory contains agents and workflows, the configuration is in `config/`, and the entry point orchestrates everything.
 
 ### Adding the MCP server configuration
 
@@ -187,7 +186,7 @@ export const gramMcpClient = new MCPClient({
 
 Replace `your-mcp-server-slug` with your actual Gram MCP server slug.
 
-The [`MCPClient`](https://mastra.ai/reference/tools/mcp-client) class connects to MCP servers and handles protocol negotiation automatically. The configuration loads environment variables first with `dotenv.config()` so `GRAM_KEY` is available, then defines a server named `PushAdvisor` with its URL and Bearer token authentication. When you call methods like `getTools()`, the client connects to the server and discovers available tools.
+The [`MCPClient`](https://mastra.ai/reference/tools/mcp-client) class connects to MCP servers and handles protocol negotiation automatically. The configuration loads environment variables first with `dotenv.config()`, so `GRAM_KEY` is available, then defines a server named `PushAdvisor` with its URL and Bearer token authentication. When you call methods like `getTools()`, the client connects to the server and discovers available tools.
 
 ### Adding the agent configuration
 
@@ -304,7 +303,7 @@ if (import.meta.url === `file://${process.argv[1]}`) {
 export { mcpWorkflow };
 ```
 
-Environment variables load at the top level, so they're available when other modules import them. The `main()` function takes input from command-line arguments or uses a default question, creates a workflow run with `createRunAsync()`, and executes it with `run.start()`. The result object contains either the output on success or an error on failure. The final `if` statement ensures `main()` only runs when the file is executed directly, not when imported as a module.
+Environment variables load at the top level, so they're available when other modules import them. The `main()` function takes input from command-line arguments or uses a default question, creates a workflow run with `createRunAsync()`, and executes it with `run.start()`. The `result` object contains either the output on success or an error on failure. The final `if` statement ensures that `main()` only runs when the file is executed directly, not when it's imported as a module.
 
 Make sure the `src/mastra/index.ts` file contains the following code: 
 
@@ -324,7 +323,7 @@ npm run dev "Is it a good day to push today?"
 
 This uses `tsx` to run TypeScript directly without compilation. The question is passed as a command-line argument and becomes the workflow input.
 
-You should see output like:
+You should see an output like the following:
 
 ```
 Starting Mastra workflow with Gram MCP server...
@@ -336,16 +335,23 @@ Output: Yes, today is a good day to push to production! It's Monday, which is co
 
 The exact output depends on the MCP server's response and how the agent interprets it.
 
-Here's what happens when the workflow runs: the entry point loads environment variables and creates a workflow run. The workflow step gets the agent, which triggers the MCP client to connect to the server and fetch available tools. The agent analyzes the question and calls the appropriate MCP tool (like `can_i_push_to_prod`). The tool runs on the server and returns a result, which the agent uses to generate a natural-language response.
+Here's what happens when the workflow runs:
+
+- The entry point loads environment variables and creates a workflow run.
+- The workflow step gets the agent, which triggers the MCP client to connect to the server and to fetch available tools.
+- The agent analyzes the question and calls the appropriate MCP tool (like `can_i_push_to_prod`).
+- The tool runs on the server and returns a result, which the agent uses to generate a natural-language response.
 
 ## Troubleshooting
+
+Let's go through some common issues and how to fix them.
 
 ### Connection errors
 
 If you see connection errors:
 
-- Verify `GRAM_KEY` is set correctly in `.env.local` (check for typos, extra spaces, or missing quotes).
-- Confirm the MCP server URL is correct and the server is accessible.
+- Check that you've set the `GRAM_KEY` correctly in `.env.local` (check for typos, extra spaces, or missing quotes).
+- Confirm that the MCP server URL is correct and the server is accessible.
 
 ### Model compatibility
 
