Proofrad using-zapier-with-gram-mcp-server.mdx

--- a/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
+++ b/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
@@ -2,7 +2,7 @@
 
 [Zapier](https://zapier.com/) is a leading automation platform that connects thousands of apps. With the **MCP Client by Zapier** integration, you can connect Zapier to your [Gram-hosted MCP servers](/blog/release-gram-beta), allowing you to trigger tools and actions on your MCP server directly from your Zapier workflows.
 
-This guide shows you how to connect Zapier to a Gram-hosted MCP server using an example Push Advisor API. You'll learn how to set up the connection, create a Zap that you can interact with in a Slack channel, and use custom MCP tools to check whether today is a good day to push to production.
+This guide shows you how to connect Zapier to a Gram-hosted MCP server using an example Push Advisor API. You'll learn how to set up the connection, create a Zap that you can interact with in a Slack channel and that uses custom MCP tools to check whether today is a good day to push to production.
 
 ## Prerequisites
 
@@ -132,7 +132,7 @@ Select **Custom prompt** for **Build mode** and select your preferred **Model**.
 
 ![input-ai-field](/assets/docs/gram/img/guides/zapier/input-ai-field.png)
 
-In the **Prompt** field, instruct the bot to give you a friendly response to questions about pushing to production, making sure to use the result of the tool. A stronger prompt will cause the AI to behave more predictably.
+In the **Prompt** field, instruct the bot to provide a friendly response to questions about pushing to production, making sure to use the result of the tool. A stronger prompt will cause the AI to behave more predictably.
 
 For example, this is a reasonably strong prompt:
 
@@ -170,7 +170,7 @@ Add a final action step and select **Slack**. Choose **Send Channel Message** as
 
 ![slack-send](/assets/docs/gram/img/guides/zapier/slack-send.png)
 
-In the **Channel** field, select the same channel as the trigger. In the **Message Text** field, insert the output from the **AI by Zapier** step. Make sure **Send as a bot?** is set to **Yes**. This ensures that the bot message doesn't kick off our trigger action, causing a loop.
+In the **Channel** field, select the same channel as the trigger. In the **Message Text** field, insert the output from the **AI by Zapier** step. Make sure **Send as a bot?** is set to **Yes**. This ensures that the bot message doesn't kick off the trigger action, causing a loop.
 
 ![slack-message-config](/assets/docs/gram/img/guides/zapier/slack-message-config.png)
 
