Proofread using-zapier-with-gram-mcp-server.mdx

--- a/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
+++ b/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
@@ -10,7 +10,7 @@ To follow this tutorial, you need:
 
 - Admin access to a [Slack](https://slack.com/) workspace
 - A [Gram account](/product/gram)
-- A [Zapier account](https://zapier.com/) (7 day free trial available)
+- A [Zapier account](https://zapier.com/) (7-day free trial available)
 
 ## Creating a Gram MCP server
 
