Update list formatting

--- a/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
@@ -99,10 +99,10 @@ npm create mastra@latest
 
 You will be prompted to provide the following information: 
 
-- The project name: Enter `mastra-mcp`.
-- The destination for the Mastra files: Press `Enter`.
-- The default provider: Select `OpenAI`.
-- The OpenAI key: Enter the OpenAI key.
+- **The project name:** Enter `mastra-mcp`.
+- **The destination for the Mastra files:** Press `Enter`.
+- **The default provider:** Select `OpenAI`.
+- **The OpenAI key:** Enter the OpenAI key.
 
 Press `Enter` to accept the default options for the remaining prompts.
 
