Fix typo in `remove-nontf-endpoints` guide

--- a/docs/terraform/guides/remove-nontf-endpoints.mdx
+++ b/docs/terraform/guides/remove-nontf-endpoints.mdx
@@ -32,4 +32,4 @@ map an OpenAPI `operationId` to a terraform resource.
 
 To apply this overlay run `speakeasy overlay apply -s {your-spec.yaml} -o {overlay.yaml}`. This will generate a new OpenAPI specification with the paths removed.
 
-Finally add this to your terraform generation workflow by using `speakeasy configure sources` to add an overlay to any source with an existing openapi specificaiton configured.
+Finally add this to your terraform generation workflow by using `speakeasy configure sources` to add an overlay to any source with an existing OpenAPI specification configured.
