--- a/docs/sdks/customize/servers.mdx
+++ b/docs/sdks/customize/servers.mdx
@@ -273,7 +273,7 @@ Override the server URL for specific instances or API calls.
   ]}
 />
 
-<Callout title="CAUTION" type="warning">
+<Callout title="Caution" type="warning">
   If you choose to configure the SDK URL at runtime and relative paths were used
   in the OpenAPI document, make sure that you account for the `baseURL` when
   initializing the SDK server configuration.
