--- a/openapi/frameworks/tsoa.mdx
+++ b/openapi/frameworks/tsoa.mdx
@@ -1,30 +1,35 @@
 ---
-title: How To Generate an OpenAPI spec with tsoa
-description: "How to generate an OpenAPI spec with tsoa and use Speakeasy to generate client SDKs."
+title: How To Generate OpenAPI with tsoa
+description: "Build powerful TypeScript APIs, export OpenAPI with tsoa, and use Speakeasy to generate client SDKs."
 ---
 
 import { Callout } from "@/mdx/components";
 
-# How to generate an OpenAPI/Swagger spec with tsoa
+# How To Generate OpenAPI with tsoa
 
-In this tutorial, we'll learn how to create an OpenAPI schema using [tsoa (TypeScript OpenAPI)](https://tsoa-community.github.io/docs/introduction.html).
+Writing a whole load of OpenAPI by hand can be tedious and error-prone, but for years the only alternative was littering your codebase with annotations. Fortunately, with [tsoa (TypeScript OpenAPI)](https://tsoa-community.github.io/docs/introduction.html), you can write clean TypeScript code and generate OpenAPI specifications automatically.
 
 <Callout title="Tip" >
   If you want to follow along, you can use the [**tsoa Speakeasy Bar example
   repository**](https://github.com/speakeasy-api/speakeasy-tsoa-example)
 </Callout>
 
-## How to generate an OpenAPI/Swagger spec with tsoa
+tsoa is a particularly clever web application framework, in that it leverages TypeScript's type system to not just build the API, but also to generate the OpenAPI document. This creates a single source of truth for the API, that can power validation, testing, documentation, and SDK generation without needing to create special workflows to keep everything in sync.
 
-To [generate an OpenAPI spec using tsoa](https://tsoa-community.github.io/docs/generating.html), we can use the tsoa CLI or call tsoa's `generateSpec` function. tsoa saves the spec as `swagger.json` by default, but we can customize the base filename using the configuration option `specFileBaseName`.
+## Generating OpenAPI with tsoa
 
-### Generating an OpenAPI Spec Using the tsoa CLI
+There are two ways to generate an OpenAPI spec using tsoa: via the CLI, or programmatically using internal generator functions.
+
+### Generating OpenAPI via CLI
 
 [Generate an OpenAPI spec](https://tsoa-community.github.io/docs/generating.html#using-cli) by running the following command in the terminal:
 
 ```bash
-# generate OpenAPI spec
-npx tsoa spec
+# generate OAS
+tsoa spec
+
+# generate routes
+tsoa routes
 ```
 
 By default, tsoa will use the configuration from the `tsoa.json` file with your generated routes and metadata to generate an OpenAPI spec.
@@ -40,13 +45,13 @@ In our example app, the relevant `tsoa.json` config is as follows:
 }
 ```
 
-This configures tsoa to output the generated OpenAPI spec in the `build` directory and to use OpenAPI version 3.
+This configures tsoa to output the generated OpenAPI spec in the `build` directory and to use OpenAPI v3.0.
 
-### Programmatically Generate an OpenAPI Spec Using tsoa
+### Programmatically generate OpenAPI
 
-To generate an OpenAPI spec using the OpenAPI [internal generator functions](https://tsoa-community.github.io/docs/generating.html#programmatic), import `generateSpec` and call this function by passing a spec config of type `ExtendedSpecConfig` from `tsoa`.
+To generate an OpenAPI document using the [internal generator functions](https://tsoa-community.github.io/docs/generating.html#programmatic), import `generateSpec` and call this function by passing a spec config of type `ExtendedSpecConfig` from `tsoa`.
 
-<Callout title="CAUTION" type="warning">
+<Callout title="Caution" type="warning">
   The recommended way to generate an OpenAPI Spec is via the CLI as tsoa
   [warns](https://tsoa-community.github.io/docs/generating.html#programmatic)
   that `generateSpec` and `ExtendedSpecConfig` can change in minor or patch
@@ -74,7 +79,7 @@ Add the code above to a TypeScript file and run it to generate an OpenAPI spec u
 
 ## Supported OpenAPI Versions
 
-As of August 2023, tsoa can generate OpenAPI version 2 and version 3 specifications. Speakeasy supports OpenAPI version 3 and version 3.1. To use Speakeasy, make sure to configure tsoa to generate OpenAPI v3.
+As of December 2025, tsoa only outputs OpenAPI documents complying with v2.0 or v3.0. v3.1 support is still a work in progress. Seeing as Speakeasy supports OpenAPI v3.0-v3.2, configuring tsoa to generate using v3.0 will work just fine.
 
 To set the OpenAPI version, add `spec.specVersion=3` to your `tsoa.json` configuration file:
 
@@ -86,7 +91,7 @@ To set the OpenAPI version, add `spec.specVersion=3` to your `tsoa.json` configu
 }
 ```
 
-## How tsoa Generates OpenAPI `info`
+## How tsoa generates OpenAPI info
 
 When generating an OpenAPI spec, tsoa tries to guess your API's title, description, and contact details based on values in your project `package.json` file.
 
