--- a/openapi/frameworks/tsoa.mdx
+++ b/openapi/frameworks/tsoa.mdx
@@ -1,26 +1,19 @@
 ---
-title: How To Generate OpenAPI with tsoa
+title: Automatically output OpenAPI from TypeScript applications with tsoa
 description: "Build powerful TypeScript APIs, export OpenAPI with tsoa, and use Speakeasy to generate client SDKs."
 ---
 
 import { Callout } from "@/mdx/components";
 
-# How To Generate OpenAPI with tsoa
+# Automatically output OpenAPI from TypeScript applications with tsoa
 
-Writing a whole load of OpenAPI by hand can be tedious and error-prone, but for years the only alternative was littering your codebase with annotations. Fortunately, with [tsoa (TypeScript OpenAPI)](https://tsoa-community.github.io/docs/introduction.html), you can write clean TypeScript code and generate OpenAPI specifications automatically.
+Anyone who has worked with OpenAPI specifications knows how useful they can be for documenting and sharing APIs. However, it can be a daunting task to create and maintain OpenAPI documents manually, especially as APIs evolve over time. Writing loads of OpenAPI by hand can be tedious and error-prone, but for years the only alternative was littering your codebase with annotations. Fortunately, with [tsoa (TypeScript OpenAPI)](https://tsoa-community.github.io/docs/introduction.html), you can write clean TypeScript code and generate OpenAPI specifications automatically.
 
-<Callout title="Tip" >
-  If you want to follow along, you can use the [**tsoa Speakeasy Bar example
-  repository**](https://github.com/speakeasy-api/speakeasy-tsoa-example)
-</Callout>
-
-tsoa is a particularly clever web application framework, in that it leverages TypeScript's type system to not just build the API, but also to generate the OpenAPI document. This creates a single source of truth for the API, that can power validation, testing, documentation, and SDK generation without needing to create special workflows to keep everything in sync.
+tsoa is a particularly clever web application framework, in that it leverages TypeScript's type system not only to help build the API, but also to generate the OpenAPI document, meaning a single source of truth for the API. This single source not only powers documentation, but powers runtime validation, contract testing, SDK generation, and anything else there's an [OpenAPI tool](https://openapi.tools/) to do, without needing to create special workflows to keep everything in sync.
 
 ## Generating OpenAPI with tsoa
 
 There are two ways to generate an OpenAPI spec using tsoa: via the CLI, or programmatically using internal generator functions.
-
-### Generating OpenAPI via CLI
 
 [Generate an OpenAPI spec](https://tsoa-community.github.io/docs/generating.html#using-cli) by running the following command in the terminal:
 
@@ -46,36 +39,6 @@ In our example app, the relevant `tsoa.json` config is as follows:
 ```
 
 This configures tsoa to output the generated OpenAPI spec in the `build` directory and to use OpenAPI v3.0.
-
-### Programmatically generate OpenAPI
-
-To generate an OpenAPI document using the [internal generator functions](https://tsoa-community.github.io/docs/generating.html#programmatic), import `generateSpec` and call this function by passing a spec config of type `ExtendedSpecConfig` from `tsoa`.
-
-<Callout title="Caution" type="warning">
-  The recommended way to generate an OpenAPI Spec is via the CLI as tsoa
-  [warns](https://tsoa-community.github.io/docs/generating.html#programmatic)
-  that `generateSpec` and `ExtendedSpecConfig` can change in minor or patch
-  releases of tsoa. The example below is illustrative and not included in the
-  example app.
-</Callout>
-
-```typescript
-import { generateSpec, ExtendedSpecConfig } from "tsoa";
-
-(async () => {
-  const specOptions: ExtendedSpecConfig = {
-    basePath: "/api",
-    entryFile: "./api/server.ts",
-    specVersion: 3,
-    outputDirectory: "./build",
-    controllerPathGlobs: ["./routeControllers/**/*Controller.ts"],
-  };
-
-  await generateSpec(specOptions);
-})();
-```
-
-Add the code above to a TypeScript file and run it to generate an OpenAPI spec using the custom configuration defined in `specOptions`.
 
 ## Supported OpenAPI Versions
 
@@ -106,24 +69,24 @@ Take this snippet from our example app's `package.json` file:
 
 ```json filename="package.json"
 {
-  "name": "speakeasy-bar-tsoa",
+  "name": "speakeasy-tsoa-example",
   "version": "1.0.0",
-  "description": "Speakeasy Bar API",
-  "author": "Speakeasy Support <support@speakeasy.bar> (https://support.speakeasy.bar)",
+  "description": "Speakeasy Train Travel tsoa API",
+  "author": "Speakeasy Support <support@speakeasy.com>",
   "license": "Apache-2.0"
 }
 ```
 
 By default, tsoa will generate the following spec based on the values above:
 
-```yaml filename="build/swagger.yaml"
+```yaml filename="build/openapi.yaml"
 info:
-  title: speakeasy-bar-tsoa
+  title: speakeasy-train-travel-tsoa
   version: 1.0.0
   license:
     name: Apache-2.0
   contact:
-    name: "Speakeasy Support "
+    name: "Speakeasy Support"
     email: support@speakeasy.bar
     url: "https://support.speakeasy.bar"
 ```
@@ -235,7 +198,7 @@ export class DrinkController extends Controller {
 
 This would generate inline parameters without documentation for the `UpdateDrink` operation in OpenAPI, as shown in the snippet below:
 
-```yaml filename="build/swagger.yaml"
+```yaml filename="build/openapi.yaml"
 requestBody:
   required: true
   content:
