tidy up headings

--- a/openapi/frameworks/tsoa.mdx
+++ b/openapi/frameworks/tsoa.mdx
@@ -736,7 +736,6 @@ export class TripsController extends Controller {
   @OperationId("updateTripDetails")
 	@Extension({"x-speakeasy-name-override":"update"})
   @Put("{tripId}")
-  @Tags("Trips")
   public async updateTrip(
     @Path() tripId: string,
     @Body() requestBody: TripUpdateParams
@@ -748,7 +747,7 @@ export class TripsController extends Controller {
 }
 ```
 
-## Add retries to your sdk with `x-speakeasy-retries`
+## Add retries to Speakeasy SDKs
 
 Speakeasy can generate SDKs that follow custom rules for retrying failed requests. For instance, if a server fails to return a response within a specified time, it may be desirable for client applications to retry their request without clobbering the server.
 
